--- a/about/index.html
+++ b/about/index.html
@@ -240,7 +240,7 @@
 
     
     <figure class="author-image">
-        <a class="img" href="https://berwickity.github.io/" style="background-image: url(/images/tree.jpg)"><span class="hidden">Bernice Wicks's Picture</span></a>
+        <a class="img" href="https://berwickity.github.io/" style="background-image: url(/images/selfportrait.jpg)"><span class="hidden">Bernice Wicks's Picture</span></a>
     </figure>
     
 
