--- a/comics/index.html
+++ b/comics/index.html
@@ -325,6 +325,17 @@
 
 <div id="slide-window">
     <ol id="slides-list">
+                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
+                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
+                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
+                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
+    </ol>
+    <span class="nav-leaky fa fa-chevron-left fa-2x" id="left"></span>
+    <span class="nav-leaky fa fa-chevron-right fa-2x" id="right"></span>
+</div>
+
+<div id="slide-window">
+    <ol id="slides-list">
                 <li class="slide" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
                 <li class="slide" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
                 <li class="slide" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
