--- a/comics/index.html
+++ b/comics/index.html
@@ -258,7 +258,7 @@
     -webkit-transition: all 0.66s ease;
 }
 
-.slide {
+.slide .plum {
     list-style: none;
     position: relative;
     float: left;
@@ -275,6 +275,25 @@
     -webkit-transform: translate3d(0px, 0px, 0px);
     -webkit-transform-style: preserve-3d;
 }
+
+.slide .leaky {
+    list-style: none;
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 278px;
+    height: 361px;
+    background: #ccc;
+    text-align: center;
+    line-height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    color: #fff;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    -webkit-transform-style: preserve-3d;
+}
+
 
 .nav-plum {
     position: relative;
@@ -325,21 +344,21 @@
 
 <div id="slide-window">
     <ol id="slides-list">
-                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
+                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
+                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
+                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
+                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
     </ol>
     <span class="nav-leaky fa fa-chevron-left fa-2x" id="left"></span>
     <span class="nav-leaky fa fa-chevron-right fa-2x" id="right"></span>
 </div>
 
 <div id="slide-window">
-    <ol id="slides-list">
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
+    <ol id="slides-list-plum">
+                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
+                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
+                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
+                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
     </ol>
     <span class="nav-plum fa fa-chevron-left fa-2x" id="left"></span>
     <span class="nav-plum fa fa-chevron-right fa-2x" id="right"></span>
