--- a/comics/index.html
+++ b/comics/index.html
@@ -258,7 +258,7 @@
     -webkit-transition: all 0.66s ease;
 }
 
-.slide .plum {
+.slide-plum {
     list-style: none;
     position: relative;
     float: left;
@@ -276,7 +276,7 @@
     -webkit-transform-style: preserve-3d;
 }
 
-.slide .leaky {
+.slide-leaky {
     list-style: none;
     position: relative;
     float: left;
@@ -344,10 +344,10 @@
 
 <div id="slide-window">
     <ol id="slides-list">
-                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
-                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
-                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
-                <li class="slide leaky" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
+                <li class="slide-leaky" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
+                <li class="slide-leaky" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
+                <li class="slide-leaky" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
+                <li class="slide-leaky" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
     </ol>
     <span class="nav-leaky fa fa-chevron-left fa-2x" id="left"></span>
     <span class="nav-leaky fa fa-chevron-right fa-2x" id="right"></span>
@@ -355,10 +355,10 @@
 
 <div id="slide-window">
     <ol id="slides-list-plum">
-                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
-                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
-                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
-                <li class="slide plum" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
+                <li class="slide-plum" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
+                <li class="slide-plum" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
+                <li class="slide-plum" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
+                <li class="slide-plum" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
     </ol>
     <span class="nav-plum fa fa-chevron-left fa-2x" id="left"></span>
     <span class="nav-plum fa fa-chevron-right fa-2x" id="right"></span>
@@ -379,7 +379,7 @@ sliderJQuery(function( $ ) {
         $.global.item = 0;
         $.global.total = slideCount;
 
-        $('.slide').css('width', slideWindowWidth + 'px');
+        $('.slide-plum').css('width', slideWindowWidth + 'px');
         $('#slides-list').css('width', totalSlidesWidth + 'px');
 
         $('#left').click(function () {
