--- a/comics/index.html
+++ b/comics/index.html
@@ -384,8 +384,8 @@
                 <li class="slide-leaky" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
                 <li class="slide-leaky" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
     </ol>
-    <span class="nav-leaky fa fa-chevron-left fa-2x" id="left"></span>
-    <span class="nav-leaky fa fa-chevron-right fa-2x" id="right"></span>
+    <span class="nav-leaky fa fa-chevron-left fa-2x" id="left-leaky"></span>
+    <span class="nav-leaky fa fa-chevron-right fa-2x" id="right-leaky"></span>
 </div>
 
 <div id="slide-window-plum">
@@ -395,8 +395,8 @@
                 <li class="slide-plum" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
                 <li class="slide-plum" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
     </ol>
-    <span class="nav-plum fa fa-chevron-left fa-2x" id="left"></span>
-    <span class="nav-plum fa fa-chevron-right fa-2x" id="right"></span>
+    <span class="nav-plum fa fa-chevron-left fa-2x" id="left-plum"></span>
+    <span class="nav-plum fa fa-chevron-right fa-2x" id="right-plum"></span>
 </div>
 
 
