--- a/comics/index.html
+++ b/comics/index.html
@@ -284,16 +284,14 @@
                               <div class="carousel slide" id="myCarousel2">
                                   <!-- Carousel items -->
                                   <div class="carousel-inner">
-                                      <div class="active item" data-slide-number="0">
-                                          <img src="http://placehold.it/1200x546&text=one"></div>
-                                      <div class="item" data-slide-number="1">
-                                          <img src="http://placehold.it/1200x546&text=two"></div>
-                                      <div class="item" data-slide-number="2">
-                                          <img src="http://placehold.it/1200x546&text=three"></div>
-                                      <div class="item" data-slide-number="3">
-                                          <img src="http://placehold.it/1200x546&text=four"></div>
-                                      <div class="item" data-slide-number="4">
-                                          <img src="http://placehold.it/1200x546&text=five"></div>
+                                    <div class="active item" data-slide-number="0">
+                                        <img src="http://berwickity.com/leaky/leaky1.jpg"></div>
+                                    <div class="item" data-slide-number="1">
+                                        <img src="http://berwickity.com/leaky/leaky2.jpg"></div>
+                                    <div class="item" data-slide-number="2">
+                                        <img src="http://berwickity.com/leaky/leaky3.jpg"></div>
+                                    <div class="item" data-slide-number="3">
+                                        <img src="http://berwickity.com/leaky/leaky4.jpg"></div>
                                   </div>
                                   <!-- Carousel nav -->
                                   <a class="left carousel-control" href="#myCarousel2" role="button" data-slide="prev">
