--- a/comics/index.html
+++ b/comics/index.html
@@ -222,10 +222,10 @@
 
         jQuery(document).ready(function($) {
           $('#myCarousel').carousel({
-              interval: 3000
+              interval: none
           });
           $('#myCarousel2').carousel({
-              interval: 2000
+              interval: none
           });
         
           $('#carousel-text').html($('#slide-content-0').html());
