--- a/comics/index.html
+++ b/comics/index.html
@@ -251,6 +251,8 @@
     <style>
         #myCarousel {
           margin-top: 30px;
+          width: 278px;
+          height: 361px;
         }
         .thumbnail {
           border: none;
