--- a/comics/index.html
+++ b/comics/index.html
@@ -198,8 +198,8 @@
                 <li class="slide2" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
                 <li class="slide2" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
     </ol>
-    <span class="nav2 fa fa-chevron-left fa-2x" id="left"></span>
-    <span class="nav2 fa fa-chevron-right fa-2x" id="right"></span>
+    <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
+    <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
 </div>
 
 
