--- a/comics/index.html
+++ b/comics/index.html
@@ -235,7 +235,7 @@
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
 
-
+<style>
 #slide-window {
     position: relative;
     width: 278px;
