--- a/comics/index.html
+++ b/comics/index.html
@@ -443,17 +443,7 @@
 }
 </style>
 
-
-<div id="slide-window">
-    <ol id="slides-list">
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
-                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
-    </ol>
-    <span class="nav fa fa-chevron-left fa-2x" id="left"></span>
-    <span class="nav fa fa-chevron-right fa-2x" id="right"></span>
-</div>
+<p>Rain</p>
 
 <div id="slide-window2">
     <ol id="slides-list2">
@@ -465,6 +455,21 @@
     <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
     <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
 </div>
+
+<p>This is just to say</p>
+<div id="slide-window">
+    <ol id="slides-list">
+                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
+                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
+                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
+                <li class="slide" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
+    </ol>
+    <span class="nav fa fa-chevron-left fa-2x" id="left"></span>
+    <span class="nav fa fa-chevron-right fa-2x" id="right"></span>
+</div>
+
+
+<p>Reading Dream</p>
 
 <div id="slide-window3">
     <ol id="slides-list3">
