--- a/comics/index.html
+++ b/comics/index.html
@@ -289,15 +289,60 @@
     opacity: 1.0;
 }
 
+.nav2 {
+    position: relative;
+    z-index: 9;
+    top: 65%;
+    cursor: pointer;
+    color: grey;
+    opacity: 0.7;
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.nav2:hover {
+    opacity: 1.0;
+}
+.nav3 {
+    position: relative;
+    z-index: 9;
+    top: 65%;
+    cursor: pointer;
+    color: grey;
+    opacity: 0.7;
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.nav3:hover {
+    opacity: 1.0;
+}
+
 
 #left {
     left: -35%;
     display: inline-block;
     width: 40px;
 	background: transparent;
+    position: relative;
 }
 
 #right {
+    right: -35%;
+    display: inline-block;
+	background: transparent;
+    position: relative;
+    width: 40px;
+}
+#left2 {
+    left: -35%;
+    display: inline-block;
+    width: 40px;
+    position: relative;
+	background: transparent;
+}
+
+#right2 {
     right: -35%;
     display: inline-block;
 	background: transparent;
@@ -342,36 +387,10 @@
     -webkit-transform-style: preserve-3d;
 }
 
-.nav2 {
-    position: relative;
-    z-index: 9;
-    top: 65%;
-    cursor: pointer;
-    color: grey;
-    opacity: 0.7;
-    transition: all 0.66s ease;
-    -webkit-transition: all 0.66s ease;
-}
-
-.nav2:hover {
-    opacity: 1.0;
-}
 
 
-#left2 {
-    left: -35%;
-    display: inline-block;
-    width: 40px;
-	background: transparent;
-}
 
-#right2 {
-    right: -35%;
-    display: inline-block;
-	background: transparent;
-    position: relative;
-    width: 40px;
-}
+
 
 #slide-window3 {
     position: relative;
@@ -411,20 +430,7 @@
     -webkit-transform-style: preserve-3d;
 }
 
-.nav3 {
-    position: relative;
-    z-index: 9;
-    top: 65%;
-    cursor: pointer;
-    color: grey;
-    opacity: 0.7;
-    transition: all 0.66s ease;
-    -webkit-transition: all 0.66s ease;
-}
 
-.nav3:hover {
-    opacity: 1.0;
-}
 
 
 #left3 {
@@ -443,7 +449,7 @@
 }
 </style>
 
-<p>Rain</p>
+<h1>Rain</h1>
 
 <div id="slide-window2">
     <ol id="slides-list2">
@@ -455,8 +461,8 @@
     <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
     <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
 </div>
-
-<p>This is just to say</p>
+<br>
+<hi>This is just to say</hi>
 <div id="slide-window">
     <ol id="slides-list">
                 <li class="slide" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
@@ -468,8 +474,8 @@
     <span class="nav fa fa-chevron-right fa-2x" id="right"></span>
 </div>
 
-
-<p>Reading Dream</p>
+<br>
+<h1>Reading Dream</h1>
 
 <div id="slide-window3">
     <ol id="slides-list3">
