--- a/comics/index.html
+++ b/comics/index.html
@@ -291,7 +291,7 @@
 }
 
 #right {
-    right: 0%;
+    left: 0%;
     display: inline-block;
     width: 40px;
 	background: transparent;
@@ -306,7 +306,7 @@
 }
 
 #right2 {
-    right: 100%;
+    left: -5%;
     display: inline-block;
 	background: transparent;
     width: 40px;
