--- a/comics/index.html
+++ b/comics/index.html
@@ -283,7 +283,7 @@
 
 
 #left {
-    left: 0%;
+    float: left;
     display: inline-block;
     width: 40px;
 	background: transparent;
@@ -291,7 +291,7 @@
 }
 
 #right {
-    left: 0%;
+    float: right;
     display: inline-block;
     width: 40px;
 	background: transparent;
