--- a/comics/index.html
+++ b/comics/index.html
@@ -298,7 +298,7 @@
     position: relative;
 }
 #left2 {
-    left: 0%;
+    float: left;
     display: inline-block;
     width: 40px;
 	background: transparent;
@@ -306,7 +306,7 @@
 }
 
 #right2 {
-    left: -5%;
+    float:right;
     display: inline-block;
 	background: transparent;
     width: 40px;
@@ -397,14 +397,14 @@
 
 
 #left3 {
-    left: -35%;
+    float: left;
     display: inline-block;
     width: 40px;
 	background: transparent;
 }
 
 #right3 {
-    right: -35%;
+    float: right;
     display: inline-block;
 	background: transparent;
     position: relative;
