--- a/about/index.html
+++ b/about/index.html
@@ -223,7 +223,7 @@
 <p>Much of my work stems from an attempt to occupy a frame of mind that is without words, like the gorgeous aestheic that arises when a collective of small birds appears out of nowhere and dives into a bush.</p>
 <p><img src="aboutImage/selfportraitSmall.jpg" alt="line drawing of author leaning into hand"></p>
 
-
+<div style="background-image:url(http://berwickity.com/aboutImage/selfportraitSmall.jpg);"></div>
 
 
 
