--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 <main id="content" class="content" role="main">
 
-<p><img src="http://berwickity.com/images/wren.jpg">You're here! Welcome to a curated selection of my comics and daily drawings.</p>
+<p><img src="http://berwickity.com/images/wren.jpg" alt="wren" width="100" height="100">You're here! Welcome to a curated selection of my comics and daily drawings.</p>
 
     
         
