--- a/about/index.html
+++ b/about/index.html
@@ -226,7 +226,7 @@
 <div style="background-image:url(http://berwickity.com/aboutImage/selfportraitSmall.jpg);"></div>
 
 
-
+<img src="http://berwickity.com/images/aboutImage/selfportraitSmall.jpg" alt="author" width="300" height="300"><
 
 
 
