--- a/about/index.html
+++ b/about/index.html
@@ -220,15 +220,13 @@
 
 
 <p>I'm a settler comics creator located on the Lands of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families.  I acknowledge both the historical and ongoing injustice perpetuated by settler communities on Indigenous peoples, and recognize that we must work to make this right.</p>
-<p>Much of my work stems from an attempt to occupy a frame of mind that is without words, like the gorgeous aestheic that arises when a collective of small birds appears out of nowhere and dives into a bush.</p>
-<p><img src="aboutImage/selfportraitSmall.jpg" alt="line drawing of author leaning into hand"></p>
-
-<div style="background-image:url(http://berwickity.com/aboutImage/selfportraitSmall.jpg);"></div>
+<p>Much of my work stems from an attempt to occupy a frame of mind that is without words, like the gorgeous aesthetic that arises when a collective of small birds appears out of nowhere and dives into a bush.</p>
 
 
-<img src="http://berwickity.com/images/aboutImage/selfportraitSmall.jpg" alt="author" width="300" height="300"><
 
+<img src="http://berwickity.com/aboutImage/selfportraitSmall.jpg" alt="author" width="300" height="300">
 
+<img src="http://berwickity.com/images/wren.jpg" alt="wren" width="100" height="100">
 
 
     </section>
