--- a/daily/index.html
+++ b/daily/index.html
@@ -227,7 +227,7 @@
         }
         .grid-item {
           background-color: transparent;
-          border: 1px solid rgba(0, 0, 0, 0.8);
+          border: transparent;
           padding: 20px;
           font-size: 30px;
           text-align: center;
@@ -240,23 +240,17 @@
         
         
         <div class="grid-container">
-          <div class="grid-item" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg)"></div>
           <div class="grid-item"><img src="http://berwickity.com/images/acornink.jpg" alt="abstract pic of back" width="300" height="300"></div>
-          <div class="grid-item">3</div>  
-          <div class="grid-item">4</div>
-          <div class="grid-item">5</div>
-          <div class="grid-item">6</div>  
-          <div class="grid-item">7</div>
-          <div class="grid-item">8</div>
-          <div class="grid-item">9</div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/catenjoysporch.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/plum.jpg" alt="abstract pic of back" width="300" height="300"></div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/willingdon.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/apples.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/dog.jpg" alt="abstract pic of back" width="300" height="300"></div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/pinkblossoms.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/catdrinks.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/dinnerfortwo.jpg" alt="abstract pic of back" width="300" height="300"></div>  
         </div>
 
-        <img src="http://berwickity.com/images/acornink.jpg" alt="abstract pic of back" width="300" height="300">
-        acornink.jpg	   catenjoysporch.jpg  plum.jpg		  willingdon.jpg
-apples.jpg	   dinnerfortwo.jpg    rainyday.jpg	  wren.jpg
-catandribbon.jpg   dog.jpg	       stackoverflow.svg
-catdrinks.jpg	   keybase.svg	       tree.jpg
-catdrinkwater.jpg  pinkblossoms.jpg    viewfromapt.jpg
 
         </body>
         </html>
