--- a/comics/index.html
+++ b/comics/index.html
@@ -237,7 +237,7 @@
     -webkit-transform-style: preserve-3d;
 }
 
-.nav {
+.nav1 {
     position: relative;
     z-index: 9;
     top: 65%;
@@ -248,7 +248,7 @@
     -webkit-transition: all 0.66s ease;
 }
 
-.nav:hover {
+.nav1:hover {
     opacity: 1.0;
 }
 
@@ -433,8 +433,8 @@
                 <li class="slide" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
                 <li class="slide" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
     </ol>
-    <span class="nav fa fa-chevron-left fa-2x" id="left"></span>
-    <span class="nav fa fa-chevron-right fa-2x" id="right"></span>
+    <span class="nav1 fa fa-chevron-left fa-2x" id="left"></span>
+    <span class="nav1 fa fa-chevron-right fa-2x" id="right"></span>
 </div>
 
 <br>
