--- a/about/index.html
+++ b/about/index.html
@@ -112,9 +112,9 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
-        <p>I write comics while living on the Lands of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families and acknowledge both the historical and ongoing injustice perpetuated by settler communities on Indigenous peoples, and recognize that we must work to make this right.</p>
+        <p>I write comics while living on the Lands of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families and acknowledge both the historical and ongoing injustice perpetuated by settler communities on Indigenous peoples.  I work to make this right.</p>
 <p>I love it when a collective of small birds appears out of nowhere and dives into a bush.  When making comics, I try to operate out of those wordless moments.</p>
-<p>I've been published by Geist Magazine</p>
+<p>I've been published by Geist Magazine.</p>
 
 
 <img src="http://berwickity.com/images/selfportraitSmall.jpg" alt="author" width="300" height="300">
