update the sections, images, about

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <a href="#home" class="w3-bar-item w3-button"><b>BR</b> Architects</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+      <a href="#comics" class="w3-bar-item w3-button">Comics</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="#drawings" class="w3-bar-item w3-button">Drawings</a>
     </div>
   </div>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" src="/images/tree.jpg" alt="tree" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
   </div>
@@ -34,9 +34,9 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-  <!-- Project Section -->
-  <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+  <!-- Comics Section -->
+  <div class="w3-container w3-padding-32" id="comics">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Comics</h3>
   </div>
 
   <div class="w3-row-padding">
@@ -96,9 +96,11 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.
+    <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. </p>
+    <p> She is a settler located on the lands of the Lands of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families, and recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created.</p>
+   <p> She has been lucky to be published by Geist Magazine. </p>
+   <img src="/selfportraitSmall.jpg" alt="House" style="width:99%">
+     
     </p>
   </div>
 
@@ -133,8 +135,8 @@
     </div>
   </div>
 
-  <!-- Contact Section -->
-  <div class="w3-container w3-padding-32" id="contact">
+  <!-- Drawings Section -->
+  <div class="w3-container w3-padding-32" id="drawings">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
     <p>Lets get in touch and talk about your next project.</p>
     <form action="/action_page.php" target="_blank">
