--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Bernice Wicks</b> Comics</a>
+    <a href="#home" class="w3-bar-item w3-button">Bernice Wicks Comics</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#comics" class="w3-bar-item w3-button">Comics</a>
@@ -25,7 +25,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="/images/tree.jpg" alt="tree" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Bernice Wicks</b></span> <span class="w3-hide-small w3-text-light-grey">Comics</span></h1>
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min">Bernice Wicks</span> <span class="w3-hide-small w3-text-light-grey">Comics</span></h1>
   </div>
 </header>
 
