--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Bernice Wicks Comics</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -33,6 +33,219 @@
 <div class="w3-content w3-padding" style="max-width:1564px">
 
   <!-- Comics Section -->
+  <style>
+#slide-window {
+    position: relative;
+    width: 278px;
+    height: 361px;
+    overflow: hidden;
+
+}
+
+#slides-list {
+    width: 278px;
+    height: 361px;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    transform: translate3d(0px, 0px, 0px);
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.slide {
+    list-style: none;
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 278px;
+    height: 361px;
+    background: #ccc;
+    text-align: center;
+    line-height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    color: #fff;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    -webkit-transform-style: preserve-3d;
+}
+
+.nav1 {
+    position: relative;
+    z-index: 9;
+    top: 65%;
+    cursor: pointer;
+    color: grey;
+    opacity: 0.7;
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.nav1:hover {
+    opacity: 1.0;
+}
+
+.nav2 {
+    position: relative;
+    z-index: 9;
+    top: 45%;
+    cursor: pointer;
+    color: grey;
+    opacity: 0.7;
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.nav2:hover {
+    opacity: 1.0;
+}
+.nav3 {
+    position: relative;
+    z-index: 9;
+    top: 40%;
+    cursor: pointer;
+    color: grey;
+    opacity: 0.7;
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.nav3:hover {
+    opacity: 1.0;
+}
+
+
+#left {
+    float: left;
+    display: inline-block;
+    width: 40px;
+	background: transparent;
+    position: relative;
+}
+
+#right {
+    float: right;
+    display: inline-block;
+    width: 40px;
+	background: transparent;
+    position: relative;
+}
+#left2 {
+    float: left;
+    display: inline-block;
+    width: 40px;
+	background: transparent;
+    position: relative;
+}
+
+#right2 {
+    float:right;
+    display: inline-block;
+	background: transparent;
+    width: 40px;
+    position: relative;
+}
+#slide-window2 {
+    position: relative;
+    width: 278px;
+    height: 361px;
+    overflow: hidden;
+
+}
+
+#slides-list2 {
+    width: 278px;
+    height: 361px;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    transform: translate3d(0px, 0px, 0px);
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.slide2 {
+    list-style: none;
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 278px;
+    height: 361px;
+    background: #ccc;
+    text-align: center;
+    line-height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    color: #fff;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    -webkit-transform-style: preserve-3d;
+}
+
+
+
+
+
+
+#slide-window3 {
+    position: relative;
+    width: 278px;
+    height: 361px;
+    overflow: hidden;
+
+}
+
+#slides-list3 {
+    width: 278px;
+    height: 361px;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    transform: translate3d(0px, 0px, 0px);
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.slide3 {
+    list-style: none;
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 278px;
+    height: 361px;
+    background: #ccc;
+    text-align: center;
+    line-height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    color: #fff;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    -webkit-transform-style: preserve-3d;
+}
+
+
+
+
+#left3 {
+    float: left;
+    display: inline-block;
+    width: 40px;
+	background: transparent;
+}
+
+#right3 {
+    float: right;
+    display: inline-block;
+	background: transparent;
+    position: relative;
+    width: 40px;
+}
+</style>
   <div class="w3-container w3-padding-32" id="comics">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Comics</h3>
   </div>
@@ -40,8 +253,17 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">Rain</div>
+        <div id="slide-window2">
+            <ol id="slides-list2">
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
+            </ol>
+            <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
+            <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
+        </div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
