--- a/index.html
+++ b/index.html
@@ -312,6 +312,225 @@
       </div>
     </div>
   </div>
+	<script>
+	sliderJQuery = jQuery.noConflict();
+	sliderJQuery(function( $ ) {
+	    $.global = new Object();
+	    $.global.total = 0;
+
+	    $(document).ready(function () {
+		var slideWindowWidth = $('#slide-window').width();
+		var slideCount = $('#slides-list li').length;
+		var totalSlidesWidth = slideCount * slideWindowWidth;
+
+		$.global.item = 0;
+		$.global.total = slideCount;
+
+		$('.slide').css('width', slideWindowWidth + 'px');
+		$('#slides-list').css('width', totalSlidesWidth + 'px');
+
+		$('#left').click(function () {
+		    resetAutoSlide();
+		    performSlide('back');
+		});
+
+		$('#right').click(function () {
+		    resetAutoSlide();
+		    performSlide('forward');
+		});
+
+	    });
+
+	    function performSlide(direction) {
+		if (direction == 'back') {
+		    var nextSlideId = $.global.item - 1;
+		}
+		if (direction == 'forward') {
+		    var nextSlideId = $.global.item + 1;
+		}
+
+		if (nextSlideId == -1) {
+
+		    moveCss($.global.total - 1);
+		} else if (nextSlideId == $.global.total) {
+
+		    moveCss(0);
+		} else {
+
+		    moveCss(nextSlideId);
+		}
+	    }
+
+	    function moveCss(nextSlideId) {
+		var slideWindowWidth = $('#slide-window').width();
+		var margin = slideWindowWidth * nextSlideId;
+
+		$('#slides-list').css('transform', 'translate3d(-' + margin + 'px,0px,0px)');
+
+		$.global.item = nextSlideId;
+	    }
+
+
+	      var autoSlide = parseInt("0", 10);
+	      var autoSlideInterval;
+	      function resetAutoSlide(){
+		if(autoSlide) {
+		  if(autoSlideInterval) {
+		    clearInterval(autoSlideInterval);
+		  }
+		  autoSlideInterval = setInterval(function(){
+		    performSlide('forward');
+		  }, autoSlide)
+		}
+	      }
+	      resetAutoSlide();
+	});
+	sliderJQuery2 = jQuery.noConflict();
+	sliderJQuery2(function( $ ) {
+	    $.global = new Object();
+	    $.global.total = 0;
+
+	    $(document).ready(function () {
+		var slideWindowWidth = $('#slide-window2').width();
+		var slideCount = $('#slides-list2 li').length;
+		var totalSlidesWidth = slideCount * slideWindowWidth;
+
+		$.global.item = 0;
+		$.global.total = slideCount;
+
+		$('.slide2').css('width', slideWindowWidth + 'px');
+		$('#slides-list2').css('width', totalSlidesWidth + 'px');
+
+		$('#left2').click(function () {
+		    resetAutoSlide();
+		    performSlide('back');
+		});
+
+		$('#right2').click(function () {
+		    resetAutoSlide();
+		    performSlide('forward');
+		});
+
+	    });
+
+	    function performSlide(direction) {
+		if (direction == 'back') {
+		    var nextSlideId = $.global.item - 1;
+		}
+		if (direction == 'forward') {
+		    var nextSlideId = $.global.item + 1;
+		}
+
+		if (nextSlideId == -1) {
+
+		    moveCss($.global.total - 1);
+		} else if (nextSlideId == $.global.total) {
+
+		    moveCss(0);
+		} else {
+
+		    moveCss(nextSlideId);
+		}
+	    }
+
+	    function moveCss(nextSlideId) {
+		var slideWindowWidth2 = $('#slide-window2').width();
+		var margin2 = slideWindowWidth2 * nextSlideId;
+
+		$('#slides-list2').css('transform', 'translate3d(-' + margin2 + 'px,0px,0px)');
+
+		$.global.item = nextSlideId;
+	    }
+
+
+	      var autoSlide = parseInt("0", 10);
+	      var autoSlideInterval;
+	      function resetAutoSlide(){
+		if(autoSlide) {
+		  if(autoSlideInterval) {
+		    clearInterval(autoSlideInterval);
+		  }
+		  autoSlideInterval = setInterval(function(){
+		    performSlide('forward');
+		  }, autoSlide)
+		}
+	      }
+	      resetAutoSlide();
+	});
+
+	sliderJQuery3 = jQuery.noConflict();
+	sliderJQuery3(function( $ ) {
+	    $.global = new Object();
+	    $.global.total = 0;
+
+	    $(document).ready(function () {
+		var slideWindowWidth = $('#slide-window3').width();
+		var slideCount = $('#slides-list3 li').length;
+		var totalSlidesWidth = slideCount * slideWindowWidth;
+
+		$.global.item = 0;
+		$.global.total = slideCount;
+
+		$('.slide3').css('width', slideWindowWidth + 'px');
+		$('#slides-list3').css('width', totalSlidesWidth + 'px');
+
+		$('#left3').click(function () {
+		    resetAutoSlide();
+		    performSlide('back');
+		});
+
+		$('#right3').click(function () {
+		    resetAutoSlide();
+		    performSlide('forward');
+		});
+
+	    });
+
+	    function performSlide(direction) {
+		if (direction == 'back') {
+		    var nextSlideId = $.global.item - 1;
+		}
+		if (direction == 'forward') {
+		    var nextSlideId = $.global.item + 1;
+		}
+
+		if (nextSlideId == -1) {
+
+		    moveCss($.global.total - 1);
+		} else if (nextSlideId == $.global.total) {
+
+		    moveCss(0);
+		} else {
+
+		    moveCss(nextSlideId);
+		}
+	    }
+
+	    function moveCss(nextSlideId) {
+		var slideWindowWidth = $('#slide-window3').width();
+		var margin = slideWindowWidth * nextSlideId;
+
+		$('#slides-list3').css('transform', 'translate3d(-' + margin + 'px,0px,0px)');
+
+		$.global.item = nextSlideId;
+	    }
+
+
+	      var autoSlide = parseInt("0", 10);
+	      var autoSlideInterval;
+	      function resetAutoSlide(){
+		if(autoSlide) {
+		  if(autoSlideInterval) {
+		    clearInterval(autoSlideInterval);
+		  }
+		  autoSlideInterval = setInterval(function(){
+		    performSlide('forward');
+		  }, autoSlide)
+		}
+	      }
+	      resetAutoSlide();
+	});
+	</script>
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
