updated daily drawings

--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
     <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. </p>
-    <p> She is a settler located on the lands of the Lands of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families, and recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created.</p>
-   <p> She has been lucky to be published by Geist Magazine. </p>
-   <img src="/selfportraitSmall.jpg" alt="House" style="width:99%">
+    <p> For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and familiesfor allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created.</p>
+   <p> She has been published by Geist Magazine. </p>
+   <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" style="width:99%">
      
     </p>
   </div>
@@ -576,23 +576,20 @@
 
   <!-- Drawings Section -->
   <div class="w3-container w3-padding-32" id="drawings">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>Lets get in touch and talk about your next project.</p>
-    <form action="/action_page.php" target="_blank">
-      <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
-      <button class="w3-button w3-black w3-section" type="submit">
-        <i class="fa fa-paper-plane"></i> SEND MESSAGE
-      </button>
-    </form>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Daily Drawings</h3>
+   <div class="grid-container">
+          <div class="grid-item"><img src="http://berwickity.com/images/apples.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/catenjoysporch.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/plum.jpg" alt="abstract pic of back" width="300" height="300"></div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/willingdon.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/acornink.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/dog.jpg" alt="abstract pic of back" width="300" height="300"></div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/pinkblossoms.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/catdrinks.jpg" alt="abstract pic of back" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/dinnerfortwo.jpg" alt="abstract pic of back" width="300" height="300"></div>  
+        </div>
   </div>
-  
-<!-- Image of location/map -->
-<div class="w3-container">
-  <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
-</div>
+ 
 
 <!-- End page content -->
 </div>
