--- a/index.html
+++ b/index.html
@@ -5,35 +5,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</head>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button">Bernice Wicks Comics</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#comics" class="w3-bar-item w3-button">Comics</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#drawings" class="w3-bar-item w3-button">Drawings</a>
-    </div>
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/images/tree.jpg" alt="tree" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min">Bernice Wicks</span> <span class="w3-hide-small w3-text-light-grey">Comics</span></h1>
-  </div>
-</header>
-
-<!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
-
-  <!-- Comics Section -->
-  <style>
+ <style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: transparent;
+  padding: 10px;
+}
+.grid-item {
+  background-color: transparent;
+  border: transparent;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  width: 300px;
+  height: 300px;
+}
 #slide-window {
     position: relative;
     width: 278px;
@@ -246,6 +233,35 @@
     width: 40px;
 }
 </style>
+</head>
+<body>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#home" class="w3-bar-item w3-button">Bernice Wicks Comics</a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#comics" class="w3-bar-item w3-button">Comics</a>
+      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#drawings" class="w3-bar-item w3-button">Drawings</a>
+    </div>
+  </div>
+</div>
+
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="/images/tree.jpg" alt="tree" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min">Bernice Wicks</span> <span class="w3-hide-small w3-text-light-grey">Comics</span></h1>
+  </div>
+</header>
+
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
+
+  <!-- Comics Section -->
+ 
   <div class="w3-container w3-padding-32" id="comics">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Comics</h3>
   </div>
@@ -538,7 +554,7 @@
     <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. </p>
     <p> For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and familiesfor allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created.</p>
    <p> She has been published by Geist Magazine. </p>
-   <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" style="width:99%">
+   <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" width="300" height="300">
      
     </p>
   </div>
