--- a/index.html
+++ b/index.html
@@ -551,20 +551,13 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. </p>
-    <p> For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and familiesfor allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created.</p>
-   <p> She has been published by Geist Magazine. </p>
-   <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" width="300" height="300">
-     
-    </p>
   </div>
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-      <h3>John Doe</h3>
-      <p class="w3-opacity">CEO & Founder</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" width="300" height="300">
+      <h3>About</h3>
+       <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created. She has been published by Geist Magazine. </p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -594,15 +587,15 @@
   <div class="w3-container w3-padding-32" id="drawings">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Daily Drawings</h3>
    <div class="grid-container">
-          <div class="grid-item"><img src="http://berwickity.com/images/apples.jpg" alt="abstract pic of back" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/catenjoysporch.jpg" alt="abstract pic of back" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/plum.jpg" alt="abstract pic of back" width="300" height="300"></div>  
-          <div class="grid-item"><img src="http://berwickity.com/images/willingdon.jpg" alt="abstract pic of back" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/acornink.jpg" alt="abstract pic of back" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/dog.jpg" alt="abstract pic of back" width="300" height="300"></div>  
-          <div class="grid-item"><img src="http://berwickity.com/images/pinkblossoms.jpg" alt="abstract pic of back" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/catdrinks.jpg" alt="abstract pic of back" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/dinnerfortwo.jpg" alt="abstract pic of back" width="300" height="300"></div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/apples.jpg" alt="apples in a plastic crate" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/catenjoysporch.jpg" alt="cat sleeping on porch under blue sky" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/plum.jpg" alt="round red-yellow plum on dried yellow grass" width="300" height="300"></div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/willingdon.jpg" alt="receding bike path with grass and trees" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/acornink.jpg" alt="human back with hand and vein lines" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/dog.jpg" alt="dog facing viewer looking through window" width="300" height="300"></div>  
+          <div class="grid-item"><img src="http://berwickity.com/images/pinkblossoms.jpg" alt="pink blossems in crayon" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/catdrinks.jpg" alt="cat on porch smelling green watering can" width="300" height="300"></div>
+          <div class="grid-item"><img src="http://berwickity.com/images/dinnerfortwo.jpg" alt="small table on porch with two blue plates" width="300" height="300"></div>  
         </div>
   </div>
  
